--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,3 +30,8 @@ jobs:
     - name: Installer
       run: |
         pyinstaller -i ui/translation.ico -F ./main.py
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: dist/main.exe
