--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,14 @@ jobs:
       run: |
         pyinstaller -i ui/translation.ico -F ./main.py
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.1
+      uses: actions/upload-artifact@latest
       with:
         path: dist/main.exe
     - name: Automatic Releases
-      uses: marvinpinto/action-automatic-releases@v1.2.1
+      uses: marvinpinto/action-automatic-releases@latest
       with:
-    # GitHub secret token
         repo_token: ${{ secrets.GITHUB_TOKEN }}
+        automatic_release_tag: "latest"
+        prerelease: true
+        title: "Automatic Build"
         files: dist/main.exe
