--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         pyinstaller -i ui/translation.ico -F ./main.py
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@latest
+      uses: actions/upload-artifact@v3.1.1
       with:
         path: dist/main.exe
     - name: Automatic Releases
